--- a/jhip3/jhip3/src/main/resources/config/application-dev.yml
+++ b/jhip3/jhip3/src/main/resources/config/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8080
+    port: 8050
 
 liquibase:
     context: dev
@@ -22,7 +22,7 @@ spring:
         show_sql: true
         generate-ddl: false
         hibernate:
-            ddl-auto: none
+            ddl-auto: update
             naming-strategy: org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
         properties:
             hibernate.cache.use_second_level_cache: false
